@@ -1,0 +1,14 @@
+<h1>BLACKPINK Lisa新單曲釋出！</h1>
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/mPC94Df3NXs" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+<p>BLACKPINK成員Lisa驚喜宣布將於下週發行新單曲。她在紐約中央公園舉行的全球公民音樂節（Global Citizen Festival）上表演，並宣布將於10月4日發行新單曲《Moonlit Floor》。該曲採用了啷噹六便士合唱團（Sixpence the Richer）1997年的熱門歌曲《Kiss Me》的樣本。</p>
+<p>歌詞中有一句“green-eyed French boy got me trippin'”，引發了外界對她與法國億萬富翁貝爾納·阿爾諾（Bernard Arnault）第四個孩子弗雷德里克·阿爾諾（Frederic Arnault）關係的猜測。</p>
+<p>另外，Lisa將於10月15日參加維多利亞的秘密時尚秀（Victoria's Secret Fashion Show），並於11月11日開始在亞洲舉行粉絲見面會巡迴演出。</p>
+<h2>ITZY宣布發行第九張迷你專輯</h2><p>ITZY宣布將於10月15日發行第九張迷你專輯《Gold》。該專輯將包含11首曲目，並以兩首主打歌《Gold》和《Imaginary Friend》為首。其中一首B面曲《Five》已於本月早些時候在團體的真人秀節目中部分公開。</p>
+<h2>BTS成員Jungkook創下公告牌全球二百强单曲榜紀錄</h2><p>BTS成員Jungkook以個人單曲《Seven (feat. Latto)》在公告牌全球二百强单曲榜（Billboard’s Global 200）上創下了62週連續排名的紀錄。這是亞洲個人歌手的最長紀錄，該曲目在9月28日的榜單上排名第80位。</p>
+<p><h2>韓國男團OMEGA X宣布在日本發行第二張迷你專輯</h2>韓國男團OMEGA X宣布將在日本發行第二張迷你專輯。該專輯將由SPIRE娛樂（Spire Entertainment）發行，具體發行日期尚未公布。</p>
+<h2>韓國男團OMEGA X將於11月13日在日本發行第二張迷你專輯《To._</h2><p>韓國男團OMEGA X將於11月13日在日本發行第二張迷你專輯《To.》，其經紀公司IPQ娛樂於週一宣佈。該團體在日本發行的上一張專輯是2022年8月發行的首張迷你專輯《Stand up!》，該專輯曾登上公信榜每日專輯排行榜第10位。</p>
+<p>去年12月，該團體在東京舉行了兩場粉絲演唱會，此前曾在美國和墨西哥進行了巡演“Keep Goin”。</p>
+<p>該11人團體於5月在首爾舉行了為期兩天的演唱會，距離其首次在韓國舉行單獨演唱會已經過去了三個月。</p>
+<p>另外，該團體仍與其前經紀公司SPIRE娛樂就合同問題進行法律鬥爭。該團體的成員於一年多前與現任經紀公司簽約。</p>
