@@ -10,3 +10,4 @@ https://tokyocheapo.com/entertainment/tokyo-events-september/
 https://tokyocheapo.com/entertainment/event-posts/tokyo-events-this-week-koenji-awa-odori-roppongi-bon-odori-and-fireworks/
 https://tokyocheapo.com/entertainment/event-posts/tokyo-events-this-week-sunflowers-hakone-festival-and-bon-odori/
 https://www.koreaherald.com/view.php?ud=20240930050684
+https://www.koreaherald.com/view.php?ud=20240930050646
